<resources>
    <string name="app_name">arXiver</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="snack_bar_saved">Paper saved</string>
    <string name="snack_bar_deleted">Paper deleted</string>
    <string name="feed_deleted">Category deleted from feed</string>
    <string name="snack_bar_hidden">Paper hidden</string>
    <string name="new_header">&#160; New papers</string>
    <string name="replaced_header">&#160; Replaced papers</string>
    <string name="cross_listed_header">&#160; Cross-listed papers</string>
    <string name="paper_save_folder">Save in folder</string>
    <string name="paper_read">Read</string>
    <string name="paper_delete">Delete</string>
    <string name="paper_hide">Hide</string>
    <string name="saved_papers">Saved papers</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="next_arxiv_update">Next arXiv update</string>
    <string name="search_textview">Search: </string>
    <string name="advanced_search_textview">Advanced Search: </string>
    <string name="search_title">Title: </string>
    <string name="search_id">ArXiv id: </string>
    <string name="search_category">Category: </string>
    <string name="search_author">Author: </string>
    <string name="search_abstract">Abstract: </string>
    <string name="search_button">Search </string>
    <string name="hint_title">title </string>
    <string name="hint_abstract">abstract </string>
    <string name="hint_author">author </string>
    <string name="hint_arXiv_id">arXiv id </string>
    <string name="hint_categories">categories </string>
    <string name="hint_all">all </string>
    <string name="results">Results</string>
    <string name="results_next">Next</string>
    <string name="results_back">Previous</string>
    <string name="search_empty">Search empty</string>
    <string name="updated">Updated</string>
    <string name="published">Published</string>
    <string name="settings">Settings</string>
    <string name="settings_clear">Clear stored papers</string>
    <string name="settings_clear_day">Clear hidden papers</string>
    <string name="my_feed">MY SUBSCRIPTIONS</string>
    <string name="hint_feed">example: hep-th</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="invalid_feed">Invalid arXiv category</string>
    <string name="added_to_feed_lc">added to feed</string>
    <string name="arxiv_search">arXiv Search</string>
    <string name="sort_by">Sort by: </string>
    <string name="order">Order: </string>
    <string name="sort_by_relevance">relevance</string>
    <string name="sort_by_last_updated">updated</string>
    <string name="sort_by_published">published</string>
    <string name="ascending">ascending</string>
    <string name="descending">descending</string>
    <string name="arxiv_ready">arXiv should have updated</string>
    <string name="home">Home</string>
    <string name="Folders">Folders</string>
    <string name="add_tip">Add new arXiv categories\n to your feed</string>
    <string name="help">F.A.Q.</string>
    <string name="tip1_title"> How do I add arXiv categories to my feed?</string>
    <string name="tip1_body">In the home-page, tap the circular red button in the bottom left of the screen. A pop-up will come out where one can choose an arXiv category code like "hep-th". More than one categories can be added to your feed by repeating this process. </string>
    <string name="tip2_title"> How do I check today\'s arXiv?</string>
    <string name="tip2_body">Click the category you want to check located in the feed in the home-page. This will take you to the list of the latest papers published in the arXiv for that category. Once there, you can swipe left to delete a paper you are not interested in, or swipe right to save it. Pushing on a paper will expand it and show you the abstract and other information. </string>
    <string name="tip3_title"> I hid a paper from today\'s feed by mistake. What do I do? </string>
    <string name="tip3_body">Go to settings, and click on "clear hidden papers". Refresh today\'s feed and all disregarded papers will show up. </string>
    <string name="tip4_title"> How do I clear all my saved papers? </string>
    <string name="tip4_body">Go to settings, and click on "clear saved papers". This will delete all your saved papers. </string>
    <string name="tip5_title"> Can I share papers with other people? </string>
    <string name="tip5_body">Go to your saved papers. Tap and hold on any paper, and multi select a group of papers you want to share. A button will appear around the bottom right of your screen that will let you share or delete the selected papers. </string>
    <string name="font_size"> Font size: </string>
    <string name="sample_title">The Large N Limit of Superconformal Field Theories and Supergravity </string>
    <string name="sample_author">Juan M. Maldacena</string>
    <string name="message_head">Selected papers from arXiver: </string>
    <string name="permission_needed">Permission needed </string>
    <string name="why_permission">This app requires access to the internet in order to check the arXiv. </string>
    <string name="why_permission_write">This app requires access to download pdf files in order to make papers available offline. Which papers are downloaded is fully controlled by the user. </string>
    <string name="permission_granted">Permission granted. </string>
    <string name="description_feed_button">Add category</string>
    <string name="description_folder_button">Add folder</string>
    <string name="description_selectAll_button">Add category</string>
    <string name="description_delete_button">Delete</string>
    <string name="description_share_button">Share</string>
    <string name="today">Today</string>
    <string name="no_app_to_view_pdf">No pdf viewer app found</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_arxiv">arXiv feed not ready or empty. Check back in a few minutes.</string>
    <string name="arXiv_page">arXiv page</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="memory_settings">Memory Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="save_offline">Save offline</string>
    <string name="file_deleted">Offline paper deleted</string>
    <string name="file_downloading">Downloading paper…</string>
    <string name="file_downloaded">Download completed</string>
    <string name="ok">OK</string>
    <string name="tip_main_1">Welcome to arXiver!\nUse the big red button to add arXiv categories to your subscriptions feed. </string>
    <string name="tip_main_2">Click on the buttons below \"MY SUBSCRIPTIONS\" to check today\'s arXiv. </string>
    <string name="tip_saved_1">You will find your saved papers here. If you want to save a paper for offline access, click on a paper and turn on the offline switch. </string>
    <string name="tip_saved_2">Hold your click on any paper to start selecting papers and delete or share them. </string>
    <string name="tip_day_1">This is the feed for an arXiv category. You can swipe left to hide a paper from your feed, or swipe right to save it.</string>
    <string name="tip_day_2">Clicking on a paper expands it showing abstract and other information. </string>
    <string name="tip_folder_1">Papers you save in folders are stored here. You can drag and drop folders to re-arrange them.</string>
    <string name="tip_folder_2">To add/delete folders, press the button on the bottom-right corner. </string>
    <string name="tip_image_description">Tip image</string>
    <string name="encoding_exception">Encoding exception</string>
    <string name="select_folder">Select</string>
    <string name="add_folder">Add folder</string>
    <string name="name_folder">Name new folder</string>
    <string name="paper_added_folder">Paper(s) added to </string>
    <string name="added_folder">Added new folder</string>
    <string name="folder_deleted">Deleted folder</string>
    <string name="folder_manager_title">Select a folder</string>
    <string name="cant_delete">Saved papers folder cannot be deleted!</string>
    <string name="update_downloaded">An update has just been downloaded.</string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="update_cancelled">Update cancelled. Restart app recommended.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="no_folder_selected">No folder selected</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>