<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5sp"
    android:layout_marginRight="5sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_textview"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/allEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_all"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advanced_search_textview"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">




                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <EditText
                        android:id="@+id/titleEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_title"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:importantForAutofill="no" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_id"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <EditText
                        android:id="@+id/idEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_arXiv_id"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:importantForAutofill="no" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_author"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <EditText
                        android:id="@+id/authorEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_author"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:importantForAutofill="no" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_abstract"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <EditText
                        android:id="@+id/abstractEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_abstract"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:importantForAutofill="no" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_category"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <MultiAutoCompleteTextView
                        android:id="@+id/categoriesMultiAutoCompleteTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:completionThreshold="2"
                        android:hint="@string/hint_categories"
                        android:imeOptions="flagNoExtractUi" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort_by"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <RadioGroup
                        android:id="@+id/sortByRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:addStatesFromChildren="false"
                        android:checkedButton="@id/radioButton1"
                        android:orientation="horizontal"
                        android:paddingLeft="5sp"
                        android:paddingRight="5sp">

                        <RadioButton
                            android:id="@+id/radioButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sort_by_relevance" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sort_by_last_updated" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sort_by_published" />
                    </RadioGroup>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <RadioGroup
                        android:id="@+id/orderRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:addStatesFromChildren="false"
                        android:checkedButton="@id/radioButton4"
                        android:orientation="horizontal"
                        android:paddingLeft="5sp"
                        android:paddingRight="5sp">

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descending" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ascending" />
                    </RadioGroup>

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_red"
                android:text="@string/search_button" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>