<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip1_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/light_red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/tip1_body"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:textColorPrimary" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip2_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/light_red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/tip2_body"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:textColorPrimary" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip3_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/light_red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/tip3_body"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:textColorPrimary" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip4_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/light_red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/tip4_body"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:textColorPrimary" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip5_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/light_red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/tip5_body"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:textColorPrimary" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>


