<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/theme_settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:textColorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:textColorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:text="@string/dark_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="?android:textColorPrimary" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/darkModeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:layoutDirection="rtl" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="49dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/font_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="?android:textColorPrimary" />

            <SeekBar
                android:id="@+id/fontSeekBar"
                style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@color/gray"
            android:backgroundTint="?backgroundColor"
            android:elevation="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1sp"
                android:layout_marginLeft="1sp"
                android:layout_marginRight="1sp"
                android:text="@string/sample_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1sp"
                android:layout_marginRight="1sp"
                android:text="@string/sample_author"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:textColorPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/memory_settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:textColorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:textColorPrimary" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:backgroundTint="?backgroundColor"
                    android:text="@string/settings_clear"
                    android:textColor="?android:textColorPrimary" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/clearDayButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:backgroundTint="?backgroundColor"
                    android:text="@string/settings_clear_day"
                    android:textColor="?android:textColorPrimary" />

            </TableRow>


        </TableLayout>
    </LinearLayout>
</ScrollView>