<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5sp"
    android:layout_marginRight="5sp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="1sp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="5sp"
        android:layout_weight="1"
        android:completionThreshold="1">


        <RadioGroup
            android:id="@+id/folderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/savedRadioButton">

            <RadioButton
                android:id="@+id/savedRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:drawableStart="@drawable/ic_baseline_folder_24"
                android:text="@string/saved_papers" />

        </RadioGroup>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/cancelFolderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/border_button_plain"
            android:text="@string/cancel"
            android:textColor="?android:textColorPrimary" />

        <android.widget.Button
            android:id="@+id/addFolderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/border_button_plain"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:text="@string/add_folder"
            android:textColor="?android:textColorPrimary" />

        <android.widget.Button
            android:id="@+id/selectFolderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/border_button_save"
            android:drawableStart="@drawable/ic_baseline_snippet_folder_24"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:text="@string/select_folder"
            android:textColor="?android:textColorPrimary" />

        <android.widget.Button
            android:id="@+id/deleteFolderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/border_button_delete"
            android:drawableStart="@drawable/ic_baseline_delete_forever_24"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:text="@string/paper_delete"
            android:textColor="?android:textColorPrimary" />

    </LinearLayout>

</LinearLayout>